setting up database

--- a/SoftwareBook/appsettings.json
+++ b/SoftwareBook/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-ABDUJP8;Database=BookListRazor;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
